<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInputLayout"

        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:hint="@string/email"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="120dp">

        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/emailEditText"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/passwordInputLayout"

        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:hint="@string/password"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailInputLayout"

        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="16dp">


        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/passwordEditText"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton

        android:id="@+id/loginButton"

        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:text="@string/login"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordInputLayout"

        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="24dp" />

    <TextView
        android:id="@+id/forgotPasswordText"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="16dp"

        android:text="@string/forgot_password"
        android:enabled="false"

        app:layout_constraintTop_toBottomOf="@id/loginButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/socialButtonsLayout"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="24dp"

        android:orientation="horizontal"

        app:layout_constraintTop_toBottomOf="@id/forgotPasswordText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/vkButton"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/vk"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/okButton"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="16dp"

            android:text="@string/ok"/>

    </LinearLayout>

    <TextView
        android:id="@+id/registrationText"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="24dp"

        android:text="@string/registration"
        android:enabled="false"

        app:layout_constraintTop_toBottomOf="@id/socialButtonsLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>